[gd_scene load_steps=11 format=3 uid="uid://dj7lnc245edkb"]

[ext_resource type="Script" path="res://Gameplay/Mainscene.gd" id="1_0606e"]
[ext_resource type="PackedScene" uid="uid://cvxl2g0i4f70" path="res://Gameplay/Player/Player.tscn" id="1_nrlk6"]
[ext_resource type="Texture2D" uid="uid://ch22iocfbkhp5" path="res://Assets/Main_menu_background.jpg" id="2_tq4c6"]
[ext_resource type="PackedScene" uid="uid://cite02fv06bu5" path="res://Maps/stage.tscn" id="4_ne0qe"]
[ext_resource type="PackedScene" uid="uid://bdt5rb0x4w08o" path="res://Menus/PlayerUI/player_ui.tscn" id="5_5yii4"]
[ext_resource type="PackedScene" uid="uid://bo5clgybhwv16" path="res://Gameplay/Seaweed/seaweed.tscn" id="6_j1pon"]
[ext_resource type="PackedScene" uid="uid://ccxfpt08ip4dv" path="res://Gameplay/Player/player_2.tscn" id="7_snl7t"]
[ext_resource type="PackedScene" uid="uid://b5j5j3hwfo61t" path="res://Menus/PlayerUI/player_ui_right.tscn" id="8_x0xod"]
[ext_resource type="AudioStream" uid="uid://lx3x6tca4td" path="res://Music/Moonlight Sonata Trap Remix - Beethoven.mp3" id="9_nmb67"]
[ext_resource type="PackedScene" uid="uid://bq47jj8ry0rvt" path="res://Camera/camera.tscn" id="10_0x8oo"]

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_0606e")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(2197, 583.5)
scale = Vector2(9.50431, 12.5885)
texture = ExtResource("2_tq4c6")

[node name="Player" parent="." instance=ExtResource("1_nrlk6")]
position = Vector2(496, 576)

[node name="Player2" parent="." instance=ExtResource("7_snl7t")]
position = Vector2(1464, 1128)

[node name="Stage" parent="." instance=ExtResource("4_ne0qe")]
position = Vector2(888, 1192)
scale = Vector2(5, 5)
layer_0/tile_data = PackedInt32Array(262132, 2, 2, 196596, 131074, 6, 131060, 131074, 6, -12, 131074, 6, 65524, 131074, 6, -65548, 131074, 6, -196620, 131074, 6, -131084, 131074, 6, -262156, 131074, 6, -393228, 131074, 6, -327692, 131074, 6, -917516, 131074, 6, -851980, 131074, 6, -786444, 131074, 6, -720908, 131074, 6, -655372, 131074, 6, -589836, 131074, 6, -524300, 131074, 6, -458764, 131074, 6, -983052, 131074, 6, -1048588, 131074, 6, -1114124, 131074, 6, -1179660, 131074, 6, -1245196, 131074, 6, -1310732, 131074, 6, -1376268, 131074, 6, -1441804, 131074, 6, -1507340, 131074, 6, -1572876, 131074, 6, -1638412, 131074, 6, -1703948, 131074, 6, -1769484, 131074, 6, -1835020, 65538, 7, -1835019, 65538, 7, -1835018, 65538, 7, -1835017, 65538, 7, -1835016, 65538, 7, -1835015, 65538, 7, -1835014, 65538, 7, -1835013, 65538, 7, -1835012, 65538, 7, -1835011, 65538, 7, -1835010, 65538, 7, -1835009, 65538, 7, -1900544, 65538, 7, -1900543, 65538, 7, -1900542, 65538, 7, -1900541, 65538, 7, -1900540, 65538, 7, -1900539, 65538, 7, -1900538, 65538, 7, -1900537, 65538, 7, -1900536, 65538, 7, -1900535, 65538, 7, -1900534, 65538, 7, -1900533, 65538, 7, -1900532, 65538, 7, -1900531, 65538, 7, -1900530, 65538, 7, -1900529, 65538, 7, -1900528, 65538, 7, -1900527, 65538, 7, -1900526, 65538, 7, -1900525, 65538, 7, -1900524, 65538, 7, -1900523, 65538, 7, -1900522, 65538, 7, -1900521, 65538, 7, -1900520, 65538, 7, -1900519, 65538, 7, -1900518, 65538, 7, -1900517, 65538, 7, -1900516, 65538, 7, -1900515, 65538, 7, -1900514, 65538, 7, -1900513, 65538, 7, -1900512, 65538, 7, 851989, 65538, 6, 851988, 65538, 6, 851987, 65538, 6, 851986, 65538, 6, 851985, 65538, 6, 851984, 65538, 6, 851983, 65538, 6, 851982, 65538, 6, 327668, 65538, 6, 393204, 65538, 6, 458740, 65538, 6, 524276, 65538, 6, 589812, 65538, 6, 655348, 65538, 6, 720884, 65538, 6, 786420, 65538, 6, 851956, 65538, 6, 917492, 65538, 6, 917493, 65538, 6, 917494, 65538, 6, 917495, 65538, 6, 917496, 65538, 6, 917497, 65538, 6, 917498, 65538, 6, 917499, 65538, 6, 917500, 65538, 6, 917501, 65538, 6, 917502, 65538, 6, 917503, 65538, 6, 851968, 65538, 6, 851969, 65538, 6, 851970, 65538, 6, 851971, 65538, 6, 851972, 65538, 6, 851973, 65538, 6, 851974, 65538, 6, 851975, 65538, 6, 851976, 65538, 6, 851977, 65538, 6, 851978, 65538, 6, 851979, 65538, 6, 851980, 65538, 6, 851981, 65538, 6, 851990, 65538, 6, 851991, 65538, 6, 851992, 65538, 6, 851993, 65538, 6, 851994, 65538, 6, 851995, 65538, 6, 851996, 65538, 6, 851997, 65538, 6, 851998, 65538, 6, 852000, 65538, 6, 851999, 65538, 6, 852001, 65538, 6, 852002, 65538, 6, 852003, 65538, 6, 852004, 65538, 6, 852005, 65538, 6, 852006, 65538, 6, 852007, 65538, 6, 852008, 65538, 6, 852009, 65538, 6, 852010, 65538, 6, 852011, 65538, 6, 852012, 65538, 6, -1900500, 65538, 6, -1834964, 65538, 6, -1769428, 65538, 6, -1703892, 65538, 6, -1638356, 65538, 6, -1572820, 65538, 6, -1507284, 65538, 6, -1441748, 65538, 6, -1376212, 65538, 6, -1310676, 65538, 6, -1245140, 65538, 6, -1179604, 65538, 6, -1114068, 65538, 6, -1048532, 65538, 6, -982996, 65538, 6, -917460, 65538, 6, -851924, 65538, 6, -786388, 65538, 6, -720852, 65538, 6, -655316, 65538, 6, -589780, 65538, 6, -524244, 65538, 6, -458708, 65538, 6, -393172, 65538, 6, -327636, 65538, 6, -262100, 65538, 6, -196564, 65538, 6, -131028, 65538, 6, -65492, 65538, 6, 44, 65538, 6, 65580, 65538, 6, 131116, 65538, 6, 196652, 65538, 6, 262188, 65538, 6, 327724, 65538, 6, 393260, 65538, 6, 458796, 65538, 6, 524332, 65538, 6, 589868, 65538, 6, 655404, 65538, 6, 720940, 65538, 6, 786476, 65538, 6, -1900511, 65538, 6, -1900510, 65538, 6, -1900509, 65538, 6, -1900508, 65538, 6, -1900507, 65538, 6, -1900506, 65538, 6, -1900505, 65538, 6, -1900504, 65538, 6, -1900503, 65538, 6, -1900502, 65538, 6, -1900501, 65538, 6, 3, 2, 5, 4, 65538, 5, 5, 65538, 5, 6, 65538, 5, 7, 65538, 5, 8, 65538, 5, 9, 65538, 5, 10, 131074, 5, -393222, 65538, 5, -393221, 65538, 5, -393220, 65538, 5, -393219, 65538, 5, 524277, 65538, 6, 524278, 131074, 6, 458772, 196610, 6, 458773, 65538, 5, 458774, 65538, 5, 458775, 65538, 5, 458794, 65538, 5, 458795, 65538, 5, 786452, 65538, 5, 589813, 65538, 6, 655349, 65538, 6, 720885, 65538, 6, 786421, 65538, 6, 851957, 65538, 6, 589814, 131074, 6, 655350, 65538, 6, 720886, 65538, 6, 786422, 65538, 6, 851958, 65538, 6, 786432, 3, 0, 196597, 131074, 6, 262133, 65538, 6, 327669, 65538, 6, 393205, 65538, 6, 458741, 65538, 6, 196598, 65538, 5, 262134, 131074, 7, 327670, 65538, 6, 393206, 65538, 6, 458742, 131074, 6, -65547, 131074, 5, -11, 524290, 5, 65525, 524290, 6, 131061, 524290, 7, 851960, 3, 0, 851961, 3, 0, 851962, 3, 0, 851963, 3, 0, 851959, 65538, 5, 851964, 65538, 5, 851965, 262146, 7, 851966, 458754, 7, 851967, 65538, 5, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 65538, 5, 786443, 65538, 5, 786444, 65538, 5, 786445, 65538, 5, 786446, 65538, 5, 786447, 65538, 5, 786448, 65538, 5, 786449, 65538, 5, 786450, 65538, 5, 786451, 65538, 5, 720908, 196610, 6, 655373, 196610, 6, 655377, 524290, 6, 720914, 524290, 6, 720909, 196610, 7, 655374, 196610, 7, 655376, 524290, 7, 720913, 524290, 7, 655375, 2, 6, 720911, 2, 6, 720910, 2, 6, 720912, 2, 6, 393237, 262146, 6, 393238, 327682, 6, 327704, 196610, 6, 262169, 262146, 6, 196636, 65538, 6, 196635, 262146, 6, 262170, 327682, 6, 28, 196610, 6, 65564, 196610, 7, 131100, 65538, 6, 29, 65538, 5, 30, 65538, 5, 31, 65538, 5, 262171, 262146, 7, 327705, 2, 5, -65504, 196610, 6, -327647, 2, 5, -262111, 2, 6, -196575, 2, 6, -131039, 2, 6, -327646, 65538, 5, -327638, 65538, 5, -327637, 65538, 5, 393240, 196610, 7, 393239, 65538, 5, 786453, 65538, 5, 786454, 65538, 5, 786455, 65538, 5, 786456, 65538, 5, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 65538, 5, 786462, 65538, 5, 786463, 65538, 5, 786464, 65538, 5, 786465, 65538, 5, 786466, 65538, 5, 786467, 65538, 5, 786468, 65538, 5, 786469, 65538, 5, 786470, 65538, 5, 786471, 65538, 5, 786472, 65538, 5, 786473, 65538, 5, 524330, 65538, 6, 589866, 65538, 6, 655402, 65538, 6, 720938, 65538, 6, 786474, 65538, 6, 524331, 65538, 6, 589867, 65538, 6, 655403, 65538, 6, 720939, 65538, 6, 786475, 65538, 6, 393258, 65538, 6, 393259, 65538, 6, -262110, 65538, 6, -196574, 65538, 6, -131038, 65538, 6, -65502, 65538, 6, 34, 65538, 6, 65570, 65538, 6, 131106, 65538, 6, 196642, 65538, 6, -262102, 65538, 6, -196566, 65538, 6, -131030, 65538, 6, -65494, 65538, 6, 42, 65538, 6, 65578, 65538, 6, 131114, 65538, 6, 196650, 65538, 6, 262186, 65538, 6, 327722, 65538, 6, -262101, 65538, 6, -196565, 65538, 6, -131029, 65538, 6, -65493, 65538, 6, 43, 65538, 6, 65579, 65538, 6, 131115, 65538, 6, 196651, 65538, 6, 262187, 65538, 6, 327723, 65538, 6, -65503, 65538, 6, 33, 65538, 6, 65569, 65538, 6, 131105, 65538, 6, 196641, 65538, 6, 32, 65538, 6, 65568, 65538, 6, 131104, 65538, 6, 196640, 65538, 6, 262176, 65538, 6, 327712, 65538, 6, 65565, 65538, 6, 131101, 65538, 6, 196637, 65538, 6, 262173, 65538, 6, 327709, 65538, 6, 65566, 65538, 6, 131102, 65538, 6, 196638, 65538, 6, 262174, 65538, 6, 327710, 65538, 6, 65567, 65538, 6, 131103, 65538, 6, 196639, 65538, 6, 262175, 65538, 6, 327711, 65538, 6, 262172, 65538, 6, 327708, 65538, 6, 327706, 65538, 6, 327707, 65538, 6, 524308, 262146, 7, 524309, 65538, 6, 589845, 524290, 5, 589844, 196610, 5, 524310, 393218, 5, 524311, 458754, 5, 393242, 196610, 5, 458778, 65538, 6, 524314, 65538, 6, 393243, 524290, 5, 458779, 524290, 6, 524315, 65538, 6, 589850, 196610, 5, 589851, 524290, 5, 786438, 65538, 5, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 589815, 65538, 5, 589816, 65538, 5, 589817, 65538, 5, 589818, 393218, 6, 589819, 458754, 6, 196599, 65538, 5, 196600, 65538, 5, 196601, 65538, 5, 196602, 65538, 5, 196603, 393218, 6, 196604, 458754, 6, 393217, 262146, 6, 393218, 327682, 6, 458753, 262146, 5, 458754, 327682, 5, 393219, 65538, 5, 393220, 65538, 5, 393221, 65538, 5, 393222, 65538, 5, 393223, 65538, 5, 393224, 65538, 5, 393225, 65538, 5, -65544, 65538, 5, -65543, 65538, 5, -65542, 65538, 5, -65541, 65538, 5, -65540, 65538, 5, 262140, 458754, 5, 262139, 393218, 5, 262135, 524290, 5, 262136, 196610, 5, 262137, 524290, 5, 262138, 196610, 5, 655355, 458754, 5, 655354, 393218, 5, 655351, 262146, 5, 655352, 458754, 5, 655353, 196610, 5, 458755, 65538, 7, 458756, 65538, 7, 458757, 65538, 7, 458758, 65538, 7, 458759, 65538, 7, 458760, 65538, 7, 458761, 65538, 7, 524293, 65538, 7, 524294, 65538, 7, 524292, 196610, 5, 589829, 196610, 5, 589830, 524290, 5, 524295, 524290, 5, 524297, 327682, 5, 524296, 262146, 5)

[node name="Bubble1" type="Marker2D" parent="."]
position = Vector2(120, 1320)

[node name="Bubble2" type="Marker2D" parent="."]
position = Vector2(717, 2009)

[node name="Bubble3" type="Marker2D" parent="."]
position = Vector2(2864, 232)

[node name="Seaweed" parent="." instance=ExtResource("6_j1pon")]
position = Vector2(3072, 1112)

[node name="PlayerUI" parent="." instance=ExtResource("5_5yii4")]
anchors_preset = -1
scale = Vector2(1.5, 1.5)

[node name="PlayerUiRight" parent="." instance=ExtResource("8_x0xod")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = 3528.0
offset_top = -8.0
offset_right = 3528.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 1
scale = Vector2(1.5, 1.5)

[node name="BubbleSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[node name="Time" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 2112.0
offset_right = 98.0
offset_bottom = 2175.0
grow_vertical = 0
theme_override_font_sizes/font_size = 45
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Intromusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_nmb67")
volume_db = 3.0
autoplay = true

[node name="Camera" parent="." instance=ExtResource("10_0x8oo")]

[connection signal="timeout" from="BubbleSpawnTimer" to="." method="_on_bubble_spawn_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
